# national-diet-search

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
client/: .env.development  .gitignore  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
client/src/app/: layout.tsx  page.tsx
client/src/lib/: auth.tsx
dockerfiles/server/: Dockerfile
server/: pyproject.toml
server/src/: agent.py  app.py  auth.py
server/src/export_openapi/: __main__.py
server/src/models/: __init__.py  common.py  googleai.py  openai.py  vertexai.py
